--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <!-- HERO/HEAD IMAGE STARTS HERE -->
       <container>
       <div class="heroimage">
-        <img src="images/hero-image.jpg" alt="greece">
+        <!-- <img src="images/hero-image.jpg" alt="greece"> -->
       </div>
       </container>
         
